; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris_x86/local/extr_42270.c_is_suid_root.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris_x86/local/extr_42270.c_is_suid_root.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32, i64 }

@is_suid_root.sbuf = internal global %struct.stat zeroinitializer, align 8
@S_ISUID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_suid_root to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_suid_root(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %7, label %5

5:                                                ; preds = %1
  %6 = call i32 (...) @die()
  br label %7

7:                                                ; preds = %5, %1
  %8 = load i8*, i8** %2, align 8
  %9 = call i64 @stat(i8* %8, %struct.stat* @is_suid_root.sbuf)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %7
  %12 = call i32 (...) @die()
  br label %13

13:                                               ; preds = %11, %7
  %14 = load i32, i32* getelementptr inbounds (%struct.stat, %struct.stat* @is_suid_root.sbuf, i32 0, i32 0), align 8
  %15 = call i32 @S_ISREG(i32 %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %19, label %17

17:                                               ; preds = %13
  %18 = call i32 (...) @die()
  br label %19

19:                                               ; preds = %17, %13
  %20 = load i64, i64* getelementptr inbounds (%struct.stat, %struct.stat* @is_suid_root.sbuf, i32 0, i32 1), align 8
  %21 = icmp eq i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %19
  %23 = load i32, i32* getelementptr inbounds (%struct.stat, %struct.stat* @is_suid_root.sbuf, i32 0, i32 0), align 8
  %24 = load i32, i32* @S_ISUID, align 4
  %25 = and i32 %23, %24
  %26 = icmp ne i32 %25, 0
  br label %27

27:                                               ; preds = %22, %19
  %28 = phi i1 [ false, %19 ], [ %26, %22 ]
  %29 = zext i1 %28 to i32
  ret i32 %29
}

declare dso_local i32 @die(...) #1

declare dso_local i64 @stat(i8*, %struct.stat*) #1

declare dso_local i32 @S_ISREG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
